src/styles/common.scss
@import 'variables';
@import 'fonts';
@import 'animations';
@import 'utils';

.blip-container {
  margin-bottom: 10px;
  width: 100%;
  font-family: "Avenir Next";
  position: relative;
}
.blip-card-photo {
  margin-right: 10px;
  position: absolute;
}
.blip-card-container {
  width: 100%;
}
.blip-container--with-photo {
  margin-left: 35px;
}
.blip-card {
  width: 100%;
  font-family: "Avenir Next";

  *, ::after, ::before {
    box-sizing: border-box;
  }

  input, textarea, label {
    font-family: "Avenir Next";
  }

  .bubble {
      font-family: "Avenir Next";
      position: relative;
      margin-bottom: 5px;
      width: auto;
      height: 100%;
      max-width: 90%;
      min-width: 160px;
      font-size: 14px;
      font-weight: 500;
      line-height: 19px;
      white-space: pre-line;
  }

  .bubble.left {
      border-radius: 13px 13px 13px 2px;
      box-shadow: 0 -1px 12px 0 #EEEEEE;
      background-color: $vue-white;
      color: $vue-gray;
      float: left;
  }

  .ratio {
    border-radius: 13px 13px 0px 0px;
  }

  .bubble.right {
      border-radius: 13px 2px 13px 13px;
      box-shadow: 0 -1px 12px 0 #EEEEEE;
      background-color: $vue-light-blip;
      color: $vue-white;
      float: right;
  }

  .notification {
    font-size: 10px;
    color: $vue-light-gray;
    line-height: 14px;
    clear: both;
  }

  .notification.left {
    float: left;
  }

  .notification.right {
    float: right;
  }

  a {
    cursor: pointer;
    text-decoration: underline;
  }

  .left a {
    color: $vue-light-blip;
  }

  .left a:visited {color: $vue-light-blip;}  /* visited link */
  .left a:hover {color: $vue-light-blip;}  /* mouse over link */
  .left a:active {color: $vue-light-blip;}  /* selected link */

  .right a {
  font-weight: bold;
  color: $vue-white;
  }

  .right a:visited {color: $vue-white;}  /* visited link */
  .right a:hover {color: $vue-white;}  /* mouse over link */
  .right a:active {color: $vue-white;}  /* selected link */

  form {
    .fixed-options {
      li span { margin-left: 17px }
    }
  }

  .fixed-options {
    a {
      text-decoration: none;
    }

    ul {
      list-style-type: none;
      clear: both;
      margin: 0;
      margin-top: 15px;
      padding: 0px;
    }

    li {
      cursor: pointer;
      text-align: center;
      padding: 10px;
      margin: 2px;
      font-size: 14px;
      font-weight: 500;
      word-break: break-word;
      display: flex;

      span {
        width: 100%;
        text-align: center;
      }

      .remove-option {
        width: 17px;
        text-align: right;
        margin-left: 0;
        visibility: hidden;
      }

      &:hover {
        .remove-option { visibility: visible; }
      }
    }

    ul {
      margin-left: -16px;
      margin-right: -16px;
    }
  }

  .left .fixed-options li {
    color: $vue-light-blip;
    border-top: 0.5px solid #e4e2e2;
  }

  .right .fixed-options li {
    color: $vue-white;
    border-top: 0.5px solid $vue-white;
  }

  .header {
    overflow: hidden;
    border-radius: inherit;

    .ratio {
      background-size: cover;
      background-position: center center;
    }

    .ratio1-1 {
      overflow: hidden;

      &:before {
        content: '';
        display: block;
        padding-top: 100%; // ratio 1:1
      }
    }

    .ratio2-1 {
      overflow: hidden;

      &:before {
        content: '';
        display: block;
        padding-top: 50%; // ratio 2:1
      }
    }

    img {
        position: absolute;
        width: 100%;
        height: 100%;
        object-fit: cover;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
      }

    .title {
      text-align: left;
      strong {
        color: $vue-dark-gray;
        display: block;
      }

      margin: 0;
      padding: 10px 20px;
    }
  }

  .saveIco,
  .editIco { cursor: pointer; }

  .editIco {
    background-color: $vue-light-blip;
    padding: 3px;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    text-align: center;
    position: absolute;
    display: none;
    top: -17px;
    right: -17px;
    z-index: 1;

    &:hover { background-color: darken($vue-light-blip, 9%) }
  }

  .saveIco {
    z-index: 1;
    background-color: $vue-light-blip;
    padding: 5px;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    text-align: center;
    position: absolute;
    top: -17px;
    right: -17px;

    &:hover { background-color: darken($vue-light-blip, 9%) }
  }

  .saveIco img {
    display: inline-block;
    vertical-align: middle;
  }

  .editIco img {
    display: inline-block;
    vertical-align: middle;
  }

  .closeIco {
    right: 17px;
  }

  .trashIco {
    right: 17px;
    background-color: $vue-delete;

    &:hover { background-color: darken($vue-delete, 9%) }
  }

  .form-group {
    margin-bottom: 0.3rem;
    padding: $bubble-padding;
    color: $vue-london;
    .input-error {
      color: $vue-delete;
    }
    .help {
      padding: 5px;
      font-size: 11px;
    }
    ::-webkit-input-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
    ::-moz-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
    :-ms-input-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
    :-moz-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
  }

  .form-control {
    display: block;
    width: 100%;
    padding: .375rem .75rem;
    color: #495057;
    background-color: #fff;
    background-image: none;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
  }

  form {
    display: block;
    margin-top: 0em;
    padding: 10px;
    width: 300px;
  }

  .form-check {
    position: relative;
    display: block;
    margin-bottom: .5rem;
  }

  .form-check-input {
    position: absolute;
    margin-top: .25rem;
    margin-left: -1.25rem;
  }

  .form-check-label {
    padding-left: 1.25rem;
    margin-bottom: 0;
    display: inline-block;
  }

  .input-error {
    border-color: $vue-warning;
  }

  input:focus, textarea:focus {
    outline: none !important;
  }

  .input-error:invalid {
    border-color: $vue-warning;
  }

  .help.input-error {
    color: $vue-warning;
  }

  .is-disabled {
    opacity: .5;
    pointer-events: none;
  }

  .text-center {
    text-align: center;
  }

  .dashed-border {
    border: 1px dashed $vue-time;
  }

  .primary-color {
    color: $vue-light-blip;
  }

  .delete-color {
    color: $vue-delete;
  }

  .color-gray {
    color: $vue-city;
  }

  .btn {
    padding: 5px;
    border: 0;
    cursor: pointer;
  }

  .btn-white {
    background-color: $vue-white !important;
  }

  .btn-dashed {
    border: 1px dashed $vue-light-gray !important;
  }

  .w-49 {
    width: 49%;
  }

  /* The Modal (background) */
  .modal {
    transition: all 0.5s ease;
    position: absolute;
    display: block;
    z-index: 2
  }

  .tabs {
    color: $vue-gray;
    font-weight: bold;
    margin: 10px;
    margin-bottom: 20px;
  }

  .tabs span {
    padding: 5px;
    cursor: pointer;
  }

  .tabs .active {
    border-bottom: 4px solid $vue-dark-blip;
  }

  .line {
    background-color: $vue-light-gray;
    width: 100%;
    height: 1px;
    margin: 5px 0;
  }

  video {
    border-radius: 13px 13px 13px 2px !important;
  }

  .form-group {
    padding: 10px;
    color: $vue-london;

    .textarea {
      margin-top: 10px;
    }
    .input-error {
      color: $vue-delete;
    }
    .upload-intructions {
      padding: 5px;
      padding-bottom: 0px;
      font-size: 12px;
    }
    ::-webkit-input-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
    ::-moz-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
    :-ms-input-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
    :-moz-placeholder {
      color: $vue-time;
      font-size: 12px;
    }
  }

  .blip-card-flex {
    padding: 0;
    margin: 0;
    list-style: none;

    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -webkit-flex-flow: row wrap;
    justify-content: space-around;
  }

  .flex-item {
    button {
      width: 100%;
    }

    padding: 5px;
    text-align: center;
    flex: 1;
  }
}

.blip-container:hover > .editIco {
  display: block;
}

.blip-container:hover > div > .editIco {
  display: block;
}

.blip-container:hover > div > div > .editIco {
  display: block;
}

.blip-container:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

.blip-bubble .blip-card:first-child .bubble.left {
  background-color: black;
}

